[package]
name = "sprout"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.4", features = ["derive"] }  # Command Line Parser
serde = { version = "1.0", features = ["derive"] } # Serialization
serde_json = "1.0"                                 # JSON support
chrono = { version = "0.4", features = ["serde"] } # Time handling (Crucial for Coma)
crossterm = "0.27"                                 # Terminal manipulation
ratatui = "0.24"                                   # TUI rendering framework
colored = "2.0"                                    # Simple colored text for quick outputs
directories = "5.0"                                # To find user's home folder cross-platform
