[package]
name = "sprout"
version = "1.2.0"
edition = "2021"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
colored = "2.0"
rand = "0.8"
sha2 = "0.10"
hex = "0.4"
base64 = "0.21"
directories = "5.0"
